# em-shield-designer

./: .gitignore  .gitignore.autosave  CMakeLists.txt  CircuitBuilderWindow.h  CircuitCanvas.h  MessageDialog.h  PropertyPanel.h  SE_sweep_single_section_aperture.csv  SectionItem.h  StackLayerPanel.h  StartupWindow.h  Styles.h  mainwindow.cpp  mainwindow.h
include/core/: AP_SlotAperture.h  AP_SlotWithCover.h  BranchTemplate.h  CircuitGenerator.h  LOAD_Impedance.h  MNASolver.h  PhysicsConstants.h  SRC_VoltageSource.h  TL_DielectricCavity.h  TL_EmptyCavity.h
resources/: app.rc  resources.qrc
src/: main.cpp
src/core/: MNASolver.cpp
